# Inform

./: .gitignore  .travis.yml  CMakeLists.txt  README.adoc  README.md  appveyor.yml  getting-started.adoc  index.adoc  index.html  unit.h  utilities.adoc
docs/: Makefile  distributions.adoc  document.bat  document.sh  error-handling.adoc  getting-started.adoc  index.adoc  references.adoc  shannon.adoc  timeseries.adoc  utilities.adoc
docs/sources/: distributions.txt  getting-started.txt  index.txt  shannon.txt  timeseries.txt
example/: Makefile
examples/: CMakeLists.txt  entropy.c  relative_entropy.c
examples/shannon/: CMakeLists.txt  entropy.c  mutual_information.c  relative_entropy.c
examples/timeseries/: CMakeLists.txt  active-info.c  block-entropy.c  conditional-entropy.c  effective-info.c  excess-entropy.c  information-flow.c  integration.c  predictive-info.c  separable-info.c  transfer-entropy.c
examples/utilities/: CMakeLists.txt  black-boxing.c  coalesce.c  decode.c  encode.c  partitioning.c  random.c  tpm.c
include/inform/: active_info.h  block_entropy.h  conditional_entropy.h  cross_entropy.h  dist.h  effective_info.h  entropy.h  entropy_rate.h  error.h  excess_entropy.h  export.h  inform.h  information_flow.h  integration.h  mutual_info.h  pid.h  predictive_info.h  relative_entropy.h  separable_info.h  shannon.h  state_encoding.h  time_series.h  transfer_entropy.h  utilities.h
include/inform/shannon/: multivariate.h  univariate.h
include/inform/utilities/: binning.h  black_boxing.h  coalesce.h  encoding.h  partitions.h  random.h  tpm.h
src/: CMakeLists.txt  active_info.c  block_entropy.c  conditional_entropy.c  cross_entropy.c  dist.c  effective_info.c  entropy.c  entropy_rate.c  error.c  excess_entropy.c  information_flow.c  integration.c  mutual_info.c  pid.c  predictive_info.c  relative_entropy.c  separable_info.c  shannon.c  state_encoding.c  time_series.c  transfer_entropy.c  utilities.c
src/shannon/: multivariate.c  univariate.c
src/utilities/: binning.c  black_boxing.c  coalesce.c  encoding.c  partitions.c  random.c  tpm.c
test/: CMakeLists.txt
test/unit/: unit.h
test/unittests/: CMakeLists.txt  active_info.c  block_entropy.c  canary.c  conditional_entropy.c  cross_entropy.c  dist.c  effective_info.c  entropy.c  entropy_rate.c  error.c  excess_entropy.c  information_flow.c  integration.c  main.c  mutual_info.c  pid.c  predictive_info.c  random.c  random.h  relative_entropy.c  separable_info.c  shannon.c  state_encoding.c  time_series.c  transfer_entropy.c  util.c  util.h  utilities.c
test/unittests/shannon/: multivariate.c  univariate.c
