add_executable(active-info active-info.c)
add_executable(block-entropy block-entropy.c)
add_executable(conditional-entropy conditional-entropy.c)
add_executable(transfer-entropy transfer-entropy.c)
add_executable(effective-info effective-info.c)
add_executable(excess-entropy excess-entropy.c)
add_executable(predictive-info predictive-info.c)
add_executable(separable-info separable-info.c)
add_executable(information-flow information-flow.c)
add_executable(integration integration.c)
